--- a/example/CGCommonToolsDemo/Podfile
+++ b/example/CGCommonToolsDemo/Podfile
@@ -1,10 +1,10 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
 
-target 'CGCommonTools' do
+target 'CGCommonToolsDemo' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for CGCommonTools
-
+  # Pods for CGCommonToolsDemo
+    pod 'CGCommonTools'
 end
